[gd_scene load_steps=12 format=3 uid="uid://crnkedpqlviy0"]

[ext_resource type="Script" path="res://Paint.gd" id="1_4iqbp"]
[ext_resource type="Texture2D" uid="uid://cmxi5rfur61y8" path="res://buck.png" id="2_mg0m0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4nlmh"]
atlas = ExtResource("2_mg0m0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wquat"]
atlas = ExtResource("2_mg0m0")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bawbl"]
atlas = ExtResource("2_mg0m0")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7y1i"]
atlas = ExtResource("2_mg0m0")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqjoi"]
atlas = ExtResource("2_mg0m0")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_opq03"]
atlas = ExtResource("2_mg0m0")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj82g"]
atlas = ExtResource("2_mg0m0")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvh0q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nlmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wquat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bawbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7y1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqjoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opq03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj82g")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynw8q"]
size = Vector2(97, 96)

[node name="Paint" type="Area2D"]
z_index = 3
position = Vector2(748, 584)
collision_layer = 16
collision_mask = 5
script = ExtResource("1_4iqbp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 5)
sprite_frames = SubResource("SpriteFrames_xvh0q")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2)
scale = Vector2(0.56, 1)
shape = SubResource("RectangleShape2D_ynw8q")

[node name="paint_stuff" type="Marker2D" parent="."]
position = Vector2(-2, -60)

[node name="output" type="Timer" parent="."]
wait_time = 1.001
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="output" to="." method="_on_output_timeout"]
